SCP-1507: attack animation, damage particles, herd behavior, leaping, collective push, active state, targeting